extending the outline

--- a/lojong.html
+++ b/lojong.html
@@ -5,15 +5,17 @@
     <title>Lojong Notes</title>
   </head>
   <body>
-    <h1>Resolve to Begin</h1>
+    <h1>I. Resolve to Begin</h1>
 <ol>
-  <li>Train in the preliminaries</li>
+  <li>1Train in the preliminaries</li>
   <ul>
     <li>the rarity and preciousness of human life</li>
     <li>the absolute inevitability of death</li>
     <li>the awesome and indelible power of our actions</li>
     <li>the inescapability of suffering</li>
   </ul>
+  <h1>Train in Empathy and Compassion</h1>
+  <li>See everything as a dream</li>  
 </ol>
 
   </body>
