twelve turnings of the wheel added

--- a/index.html
+++ b/index.html
@@ -8,9 +8,21 @@
     <h1>Four Noble Truths and the Eightfold Path</h1>
     <h2>Four Noble Truths</h2>
     <h3>Suffering</h3>
-    <h3>Creating Suffering</h3>
+    <h4>Recognition: this is suffering</h4>
+    <h4>Encouragement: suffering should be understood</h4>
+    <h4>Realization: suffering is understood</h4>
+    <h3>Arising of Suffering</h3>
+    <h4>Recognition: there is an ignoble way that led to suffering</h4>
+    <h4>Encouragement: that ignoble way should be understood</h4>
+    <h4>Realization: that ignoble way is understood</h4>
     <h3>Cessation of Creating Suffering</h3>
+    <h4>Recognition: wellbeing is possible</h4>
+    <h4>Encouragement: wellbeing should be obtained</h4>
+    <h4>Realization: wellbeing is obtained</h4>
     <h3>The Eightfold Path</h3>
+    <h4>Recognition: there is a noble path that leads to wellbeing</h4>
+    <h4>Encouragement: this noble path has to be lived</h4>
+    <h4>Realization: the noble path is being lived</h4>
     <ul>
 <li>Right View</li>
 <li>Right Thought</li>
