slowly fleshing out the lojong

--- a/lojong.html
+++ b/lojong.html
@@ -16,8 +16,14 @@
   </ul>
   <h1>Train in Empathy and Compassion</h1>
   <li>See everything as a dream</li>
-  <li>***</li>
-  <li>***</li>
+  <li>Examine the nature of awareness</li>
+  <li>Don't get stuck on peace</li>
+  <li>Rest in the openness of the mind</li>
+  <li>In postmeditation be a child of illusion</li>
+  <ul>
+    <li>Think of Kurt Vonnegut's admonition to "Live by the harmless untruths that keep you healthy and happy."</li>
+  </ul>
+  <li>Practive sending and receiving alternating on the breath</li>
 </ol>
 
   </body>
