--- a/forward.html
+++ b/forward.html
@@ -2,4 +2,6 @@ here is some content
 more, even
 Morgen
 
-Vancouver is a wonderful city. 
+Vancouver is a wonderful city.
+
+GATA3 has never been more important. Publish it!
