another missive from Vancouver

--- a/forward.html
+++ b/forward.html
@@ -5,3 +5,5 @@ Morgen
 Vancouver is a wonderful city.
 
 GATA3 has never been more important. Publish it!
+
+Tired of being in sessions of limited use. 
