seeking conflict wit Modifed too.

--- a/forward.html
+++ b/forward.html
@@ -6,4 +6,6 @@ Vancouver is a wonderful city.
 
 GATA3 has never been more important. Publish it!
 
-Tired of being in sessions of limited use. 
+Tired of being in sessions of limited use.
+
+Modified too.
