adding elements of deliberate practice

--- a/index.html
+++ b/index.html
@@ -33,7 +33,12 @@
 <li>Right Mindfulness</li>
 <li>Right Concentration</li>
 <li></li>
-<li>***</li>
+<li>Elements of deliberate practice</li>
+<li>1. It's designed specificatlly to improve performance.</li>
+<li>2. It can be repeated a lot.</li>
+<li>3. Feedback on results is continuosly available. </li>
+<li>4. It's highly demanding mentally.</li>
+<li>5. It isn't much fun.</li>
     </ul>
   </body>
 </html>
