--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <li>4. It's highly demanding mentally.</li>
 <li>5. It isn't much fun.</li>
 
-More here later.  Like now. 
+More here later.  Like now. Or now. 
 
     </ul>
   </body>
