git checkout comment

--- a/forward.html
+++ b/forward.html
@@ -18,3 +18,4 @@ Again.
 
 from my macbook air 4/18/18
 from macbook air 4/30/18
+git checkout -- <file> is the way to get rid of changes in favor of the git repo version
